--- a/app/src/main/res/layout/item_endcard_detail_result_row_title.xml
+++ b/app/src/main/res/layout/item_endcard_detail_result_row_title.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:layout_weight="115"
         android:gravity="center"
-        android:text="Quarter"
+        android:text="@string/P312"
         android:textColor="@color/color_BEC7DC"
         android:textSize="@dimen/textSize14sp" />
 
@@ -25,7 +25,7 @@
         android:layout_height="match_parent"
         android:layout_weight="80"
         android:gravity="center"
-        android:text="@string/game_settlement"
+        android:text="@string/P313"
         android:textColor="@color/color_BEC7DC"
         android:textSize="@dimen/textSize14sp" />
 
@@ -40,7 +40,7 @@
         android:layout_height="match_parent"
         android:layout_weight="170"
         android:gravity="center"
-        android:text="@string/J267"
+        android:text="@string/P314"
         android:textColor="@color/color_BEC7DC"
         android:textSize="@dimen/textSize14sp" />
 </LinearLayout>
