--- a/app/src/main/res/layout/view_endcard_guide_step5.xml
+++ b/app/src/main/res/layout/view_endcard_guide_step5.xml
@@ -24,7 +24,7 @@
         android:gravity="center"
         android:textSize="@dimen/textSize14sp"
         android:textColor="@color/color_FFFFFF"
-        android:text="Click to change cards with other amounts！"/>
+        android:text="@string/P300"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/commissiom_completed"
+                android:text="@string/P301"
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize14sp" />
             <TextView
@@ -61,7 +61,7 @@
             android:background="@drawable/bg_btn_preview_gray"
             android:textColor="@color/color_FFFFFF"
             android:textSize="@dimen/textSize14sp"
-            android:text="@string/P012"/>
+            android:text="@string/P297"/>
     </LinearLayout>
 
 </LinearLayout>
