--- a/app/src/main/res/layout/fragment_endcard_record_detail.xml
+++ b/app/src/main/res/layout/fragment_endcard_record_detail.xml
@@ -75,7 +75,7 @@
              android:textSize="@dimen/textSize14sp"
              android:textStyle="bold"
              android:textColor="@color/color_FFFFFF"
-             android:text="Betting content"/>
+             android:text="@string/P316"/>
          <ImageView
              android:id="@+id/iv_status"
              android:layout_width="wrap_content"
@@ -298,7 +298,7 @@
             android:textSize="@dimen/textSize14sp"
             android:textStyle="bold"
             android:textColor="@color/color_FFFFFF"
-            android:text="Betting result"/>
+            android:text="@string/B003"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -348,7 +348,7 @@
             android:ellipsize="end"
             android:textSize="@dimen/textSize16sp"
             android:textColor="@color/color_FFFFFF"
-            android:text="@string/P315"/>
+            android:text="@string/H020"/>
         <View
             android:layout_width="@dimen/margin_0.5"
             android:layout_height="@dimen/margin_28"
