--- a/app/src/main/res/layout/item_match_result_title.xml
+++ b/app/src/main/res/layout/item_match_result_title.xml
@@ -87,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/game_result"
+                android:text="@string/B003"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize12sp" />
 
