--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -380,6 +380,7 @@
                         android:id="@+id/cbAgree"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@color/transparent"
                         android:layout_marginTop="@dimen/margin_5"
                         android:layout_marginHorizontal="@dimen/margin_20"
                         android:button="@null"
