--- a/app/src/main/res/layout/item_endcard_match.xml
+++ b/app/src/main/res/layout/item_endcard_match.xml
@@ -90,7 +90,6 @@
         android:gravity="center_horizontal"
         android:textSize="12sp"
         android:textColor="@color/color_6D7693"
-        android:text="Section 1 8:42"
         tools:text="Section 1 8:42"/>
 
     <TextView
@@ -104,7 +103,7 @@
         android:gravity="center"
         android:textSize="12sp"
         android:textColor="@color/white"
-        android:text="View Card"/>
+        android:text="@string/P303"/>
 
     <TextView
         android:id="@+id/tvNum"
