--- a/app/src/main/res/layout/dialog_money_submit.xml
+++ b/app/src/main/res/layout/dialog_money_submit.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="8dp"
-    tools:context="ui.money.recharge.MoneySubmitDialog">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_191919_FCFCFC"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginHorizontal="30dp"
+        android:background="@drawable/bg_white_radius_8">
 
         <TextView
             android:id="@+id/txv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/color_191919_FCFCFC"
             android:gravity="center"
             android:minHeight="44dp"
             android:text="@string/title_pay_msg"
@@ -84,6 +81,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="start"
             android:layout_marginStart="26dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="5dp"
@@ -94,6 +92,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="start"
             android:layout_marginStart="26dp"
             android:layout_marginTop="3dp"
             android:layout_marginEnd="5dp"
@@ -145,4 +144,4 @@
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
