--- a/app/src/main/res/layout/dialog_info_center_detail_list.xml
+++ b/app/src/main/res/layout/dialog_info_center_detail_list.xml
@@ -1,96 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:content="org.cxct.sportlottery.ui.infoCenter.InfoCenterDetailDialog">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_white_radius_8"
+    android:orientation="vertical">
 
-    <data>
-
-        <variable
-            name="infoCenterViewModel"
-            type="org.cxct.sportlottery.ui.infoCenter.InfoCenterViewModel" />
-
-        <variable
-            name="infoCenterData"
-            type="org.cxct.sportlottery.network.infoCenter.InfoCenterData" />
-
-    </data>
-
-    <FrameLayout
+    <TextView
+        android:id="@+id/txv_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.bet_record.search.result.BetRecordDetailDialog">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:minHeight="44dp"
+        android:paddingHorizontal="26dp"
+        android:paddingVertical="@dimen/margin_12"
+        android:textColor="@color/color_CCCCCC_000000"
+        android:textSize="@dimen/textSize16sp"
+        android:textStyle="bold"
+        tools:text="工商银行停用通知" />
 
-        <androidx.cardview.widget.CardView
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:fillViewport="true"
+        android:overScrollMode="never">
+
+        <TextView
+            android:id="@+id/txv_detail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="40dp"
-            app:cardCornerRadius="8dp"
-            tools:context=".ui.bet_record.search.result.BetRecordDetailDialog">
+            android:layout_height="0dp"
+            android:layout_gravity="top"
+            android:paddingHorizontal="26dp"
+            android:paddingVertical="11dp"
+            android:textColor="@color/color_BBBBBB_333333"
+            android:textSize="@dimen/textSize12sp"
+            tools:text="公告假文：\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n人护是仍现升诗时坐价一！有孩维样的师中院？大倒发机，说广的西家时，种常的形小质到不功片统业，友年度器量居味静，告作头这城思没师王保，心有作况业后去，了选下步，到去般分想后史位当步那已；家前的…" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/color_191919_FCFCFC"
-                android:orientation="vertical">
+    </ScrollView>
 
-                <TextView
-                    android:id="@+id/txv_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:minHeight="44dp"
-                    android:paddingHorizontal="26dp"
+    <View
+        android:id="@+id/info_center_detail_divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/color_191919_EEEFF0" />
 
-                    android:textColor="@color/color_CCCCCC_000000"
-                    android:textSize="@dimen/textSize16sp"
-                    android:textStyle="bold"
-                    tools:text="工商银行停用通知" />
+    <Button
+        android:id="@+id/info_center_detail_confirm"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:text="@string/btn_confirm"
+        android:textColor="@color/color_317FFF_0760D4"
+        android:textSize="@dimen/textSize16sp"
+        android:textStyle="bold" />
+
+</LinearLayout>
 
 
-
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:fillViewport="true"
-                    android:overScrollMode="never">
-
-                    <TextView
-                        android:id="@+id/txv_detail"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_gravity="top"
-                        android:paddingHorizontal="26dp"
-                        android:paddingVertical="11dp"
-                        android:textColor="@color/color_BBBBBB_333333"
-                        android:textSize="@dimen/textSize12sp"
-                        tools:text="公告假文：\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n人护是仍现升诗时坐价一！有孩维样的师中院？大倒发机，说广的西家时，种常的形小质到不功片统业，友年度器量居味静，告作头这城思没师王保，心有作况业后去，了选下步，到去般分想后史位当步那已；家前的…" />
-
-                </ScrollView>
-
-                <View
-                    android:id="@+id/info_center_detail_divider"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/color_191919_EEEFF0" />
-
-                <Button
-                    android:id="@+id/info_center_detail_confirm"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="match_parent"
-                    android:layout_height="44dp"
-                    android:background="@color/transparent_black_0"
-                    android:text="@string/btn_confirm"
-                    android:textColor="@color/color_317FFF_0760D4"
-                    android:textSize="@dimen/textSize16sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
-    </FrameLayout>
-</layout>
