--- a/app/src/main/res/layout/dialog_chat_red_enp.xml
+++ b/app/src/main/res/layout/dialog_chat_red_enp.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="375dp"
     android:layout_height="430dp"
     android:layout_gravity="center"
     tools:ignore="SpUsage, ContentDescription">
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/red_enp_close"
         android:layout_width="match_parent"
@@ -283,3 +287,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
