--- a/app/src/main/res/layout/dialog_first_deposit_notice.xml
+++ b/app/src/main/res/layout/dialog_first_deposit_notice.xml
@@ -1,46 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="420dp"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_white_radius_8"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:paddingHorizontal="@dimen/margin_15"
+    android:paddingVertical="@dimen/margin_12">
+
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical"
-        android:background="@drawable/bg_white_radius_8"
-        android:layout_margin="@dimen/margin_18"
-        android:paddingHorizontal="@dimen/margin_15"
-        android:paddingVertical="@dimen/margin_12">
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/J095"
-            android:textStyle="bold"
-            android:textSize="@dimen/textSize18sp"
-            android:textColor="@color/color_0D2245" />
-        <org.cxct.sportlottery.view.webView.OkWebView
-            android:id="@+id/wvContent"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_marginVertical="@dimen/margin_15" />
-        <Button
-            android:id="@+id/btnClose"
-            style="?android:attr/borderlessButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginHorizontal="@dimen/margin_5"
-            android:background="@drawable/selector_button_default"
-            android:text="@string/bottom_sheet_close"
-            android:textColor="@color/color_FFFFFF"
-            android:textSize="@dimen/textSize17sp"
-            android:textAllCaps="false" />
-    </LinearLayout>
+        android:text="@string/J095"
+        android:textColor="@color/color_0D2245"
+        android:textSize="@dimen/textSize18sp"
+        android:textStyle="bold" />
+
+    <org.cxct.sportlottery.view.webView.OkWebView
+        android:id="@+id/wvContent"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:layout_marginVertical="@dimen/margin_15" />
+
+    <Button
+        android:id="@+id/btnClose"
+        style="?android:attr/borderlessButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:layout_marginHorizontal="@dimen/margin_5"
+        android:background="@drawable/selector_button_default"
+        android:text="@string/bottom_sheet_close"
+        android:textAllCaps="false"
+        android:textColor="@color/color_FFFFFF"
+        android:textSize="@dimen/textSize17sp" />
 </LinearLayout>
 
