--- a/app/src/main/res/layout/dialog_log_recharge_detail.xml
+++ b/app/src/main/res/layout/dialog_log_recharge_detail.xml
@@ -2,14 +2,13 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="40dp"
-    app:cardCornerRadius="4dp"
+    app:cardCornerRadius="8dp"
     tools:context="org.cxct.sportlottery.ui.finance.RechargeLogDetailDialog">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_191919_FCFCFC">
 
