--- a/app/src/main/res/layout/dialog_money_submit.xml
+++ b/app/src/main/res/layout/dialog_money_submit.xml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <LinearLayout
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginHorizontal="30dp"
         android:background="@drawable/bg_white_radius_8">
 
         <TextView
@@ -46,6 +42,7 @@
                 android:id="@+id/txv_pay_way"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="start"
                 android:layout_marginHorizontal="5dp"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="@dimen/textSize14sp"
@@ -71,6 +68,7 @@
                 android:id="@+id/txv_pay_money"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="start"
                 android:layout_marginHorizontal="5dp"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="@dimen/textSize14sp"
@@ -143,5 +141,3 @@
         </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
