--- a/app/src/main/res/layout/dialog_red_envelope_list.xml
+++ b/app/src/main/res/layout/dialog_red_envelope_list.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center">
+<RelativeLayout
     android:id="@+id/rootLayout"
     android:layout_width="310dp"
     android:layout_height="320dp"
@@ -84,3 +89,4 @@
         android:textSize="@dimen/textSize14sp" />
 
 </RelativeLayout>
+</LinearLayout>
